--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,13 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^4.21.2",
     "firebase-admin": "^13.4.0",
+    "flatted": "^3.3.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
     "multer": "^2.0.1"
