--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,8 +20,10 @@
     "clsx": "^2.1.1",
     "firebase": "^12.0.0",
     "input-otp": "^1.4.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
+    "nprogress": "^0.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
