--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,6 +25,7 @@
     "next-themes": "^0.4.6",
     "nprogress": "^0.2.0",
     "react": "^19.1.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
