--- a/front-end/.env
+++ b/front-end/.env
@@ -6,3 +6,4 @@ VITE_messagingSenderId=266468955913
 VITE_appId=1:266468955913:web:b89483efadcdf22a2925d8
 VITE_measurementId=G-DHLHWKFZYG
 VITE_BACKEND_URL=http://localhost:5000
+VITE_RESUME_MICROSERVICE=https://resumescanner-69op.onrender.com
