--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,7 +15,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
-    "axios": "^1.10.0",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.0.0",
@@ -29,6 +29,7 @@
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
+    "react-toastify": "^11.0.5",
     "react-use": "^17.6.0",
     "recharts": "^3.1.2",
     "sonner": "^2.0.6",
